# de-zoomcamp-2026-capstone-project

./: .dockerignore  .env.docker  .gitignore  .ingestion_cache.json  Dockerfile.airflow  Dockerfile.streamlit  Makefile  README.md  docker-compose.yaml  pyproject.toml  sample.env
.venv-airflow/: pyvenv.cfg
airflow-home/config/: airflow.cfg
airflow-home/dags/: citibike_elt_backfill.py  citibike_elt_pipeline.py  test.py
dashboard/: app.py  charts.py  data.py
dbt/citibike/: dbt_project.yml  profiles.yml
dbt/citibike/models/marts/: _marts.yml  mart_avg_duration_by_customer.sql  mart_station_activity.sql  mart_trips_by_day_type.sql  mart_trips_by_hour.sql  mart_trips_by_month.sql
dbt/citibike/models/staging/: _sources.yml  _staging.yml  stg_trips.sql
notebooks/: charts.ipynb  charts_theme.ipynb  citi.ibike_ingest.ipynb  kpis.ipynb
src/citibike/ingest/: citibike_ingest.py
src/citibike/load/: citibike_load.py
src/ingest/: citibike_ingest.py
src/load/: citibike_load.py
streamlit/: app.py  data.py
terraform/: main.tf  variables.tf
