[project]
name = "de-zoomcamp-2026-capstone-project"
version = "0.1.0"
description = "Data Engineering Zoomcamp 2026 Capstone Project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-cloud-storage>=3.9.0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "stream-unzip>=0.0.101",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
