[project]
name = "de-zoomcamp-2026-capstone-project"
version = "0.1.0"
description = "Data Engineering Zoomcamp 2026 Capstone Project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-bigquery>=1.11.1",
    "dbt-core>=1.11.7",
    "google-cloud-bigquery>=3.0.0",
    "google-cloud-storage>=2.4.0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "stream-unzip>=0.0.101",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
